<resources>
    <string name="app_name">Praktek Ujikom</string>
    <string name="nama">Nama</string>
    <string name="nip">NIP</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="foto">Foto</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="add_date">Add Date</string>
    <string name="add">Add</string>
    <string name="upload_foto">Upload Foto</string>
</resources>